@@ -37,7 +37,6 @@ import org.springframework.data.redis.core.RedisTemplate;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -95,9 +94,9 @@ public class TestIntegrationPortAllocator {
 
         List<Integer> allAllocatedPorts = Stream.concat(portsThread1.stream(), portsThread2.stream())
                 .sorted()
-                .collect(Collectors.toList());
+            .toList();
 
-        List<Integer> expectedPorts = IntStream.range(100, 300).boxed().collect(Collectors.toList());
+        List<Integer> expectedPorts = IntStream.range(100, 300).boxed().toList();
 
         Assertions.assertEquals(expectedPorts, allAllocatedPorts);
     }
@@ -197,9 +196,9 @@ public class TestIntegrationPortAllocator {
         List<Integer> allAllocatedPorts = Stream.concat(portAllocator.getOwnedPorts("owner1_2").stream(),
                         portAllocator.getOwnedPorts("owner2_2").stream())
                 .sorted()
-                .collect(Collectors.toList());
+            .toList();
 
-        List<Integer> expectedPorts = IntStream.range(100, 110).boxed().collect(Collectors.toList());
+        List<Integer> expectedPorts = IntStream.range(100, 110).boxed().toList();
         Assertions.assertEquals(expectedPorts, allAllocatedPorts);
     }
 
